# controllers/notifyController.js
@@ -82,4 +82,75 @@ exports.get_all_notification_for_one_user = (req, res) => {
 
 };
 
+exports.update_view_notification_for_one_user = (req, res) => {
+    let {_id} = req.user;
+    if ( _id === undefined) {
+        return res.send({
+            "response": false,
+            "value": "not find params "
+        });
+    }
+
+    Notify.updateMany({to_id:_id},{status: 1},function(err,arr) {
+        if(err) return res.send({
+            "response": false,
+            "value": err,
+        });
+
+        return res.send({
+            "response": true,
+            "value": arr,
+        });
+    });
+
+};
+
+exports.update_one_notification_for_one_user = (req, res) => {
+    let {_id} = req.user;
+    let {notification_id} = req.body;
+    if ( _id === undefined || notification_id === undefined ) {
+        return res.send({
+            "response": false,
+            "value": "not find params "
+        });
+    }
+    UpdateOneNotify({_id:notification_id, to_id: _id}, req.body)
+        .then(notifiud=>{
+            if (notifiud) {
+                return res.send({
+                    "response": true,
+                    "value": notifiud,
+                });
+            }else{
+                return res.send({
+                    "response": false,
+                    "value": "update fail",
+                });
+            }
+        },err=>{
+            return res.send({
+                "response": false,
+                "value": err,
+            });
+        })
+
+};
+
+let delete_notification_old = () => {
+    FindAllNotify({create_at:{$lt: Date.now()-2592000000}, status: 0})
+        .then(notis=>{
+           if (notis.length > 0) {
+               notis.map((noti=>{
+                   DeleteOneNotify({_id:noti._id})
+                       .then(notidel=>{
+                           if (notidel) {
+                               console.log(" deleted notification old", notidel.content);
+                           }
+                       })
+               }))
+           }
+        })
+};
+
 exports.CreateNotify = CreateNotify;
+exports.delete_notification_old = delete_notification_old;
