# routes/todoListRoutes.js
@@ -17,6 +17,10 @@ module.exports = function (app) {
     // insert document socket
     app.route('/api/get-notification-one-user')
         .post( userHandles.loginRequired, notify.get_all_notification_for_one_user);
+    app.route('/api/update-view-notification-for-one-user')
+        .get( userHandles.loginRequired, notify.update_view_notification_for_one_user);
+    app.route('/api/update-one-notification-for-one-user')
+        .get( userHandles.loginRequired, notify.update_one_notification_for_one_user);
 
     // insert document socket
     app.route('/api/insert-tutorial-socket')
